src/App.css
html, body {
  margin: 0;
  padding: 0;
}

.App {
  text-align: center;
}

.App-header {
  text-align: center;
  background-color: #3ecfa1;
  height: 50px;
  padding: 20px;
  color: white;

}

.Profile-page {
  font-family: Helvetica;
  font-size: 1.5em;
  font-weight: 400;
}

.App-intro {
  font-size: large;
}


.text-input {
  color: #3ecfa1;
  padding: 0;
  margin: 0 0 0 1em;
  flex-grow: 1;
  border: none;
  font-size: .75em;
  font-weight: 200;
}

.text-input:focus {
  outline: none;
}

.form {
  text-align: left;
  padding: 0 2em;

}

.container {
  max-width: 600px;
  margin: 0 auto;
}

.label {
  display: flex;
  padding: 1em 0;
  font-family: sans-serif;
  font-weight: bold;
  border-bottom: 1px solid #ccc;
}

.submit {
  display: block;
  margin: 1em auto;
}

